validate TheAnh vs Dung

--- a/APPVIEW/Views/Account/ChangePassword.cshtml
+++ b/APPVIEW/Views/Account/ChangePassword.cshtml
@@ -29,12 +29,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&ampdisplay=swap"
           rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@10/dist/sweetalert2.min.css">
 
     <link rel="stylesheet" href="~/contentadmin/assets/vendor/fonts/materialdesignicons.css" />
 
     <!-- Menu waves for no-customizer fix -->
     <link rel="stylesheet" href="~/contentadmin/assets/vendor/libs/node-waves/node-waves.css" />
-
+    <!-- Sử dụng SweetAlert2 qua CDN -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <!-- Core CSS -->
     <link rel="stylesheet" href="~/contentadmin/assets/vendor/css/core.css" class="template-customizer-core-css" />
     <link rel="stylesheet" href="~/contentadmin/assets/vendor/css/theme-default.css" class="template-customizer-theme-css" />
@@ -145,27 +147,32 @@
 
                         <form asp-action="ChangePassword" id="formAuthentication" class="mb-3" method="POST">
                             <div class="form-floating form-floating-outline mb-3">
-                                <input asp-for=OldPassword type="password"
-                                       id="password"
+                                <input asp-for="OldPassword"
+                                       type="password"
+                                       id="oldPassword"
                                        class="form-control"
                                        name="OldPassword"
                                        placeholder="&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;"
                                        aria-describedby="password" />
-                                <label for="OldPassword">Old password</label>
+                                <span id="oldPasswordValidation" class="text-danger"></span>
+                                <label for="OldPassword">Mật khẩu cũ</label>
                             </div>
                             <div class="mb-3">
                                 <div class="form-password-toggle">
                                     <div class="input-group input-group-merge">
                                         <div class="form-floating form-floating-outline">
-                                            <input asp-for=NewPassWord type="password"
-                                                   id="password"
+                                            <input asp-for="NewPassWord"
+                                                   type="password"
+                                                   id="newPassword"
                                                    class="form-control"
                                                    name="NewPassWord"
                                                    placeholder="&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;"
-                                                   aria-describedby="password" />
-                                            <label for="NewPassWord">NewPassWord</label>
+                                                   aria-describedby="password"
+                                                   required />
+                                            <span id="newPasswordValidation" class="text-danger"></span>
+                                            <label for="NewPassWord">Mật khẩu mới</label>
                                         </div>
-                                        <span class="input-group-text cursor-pointer"><i class="mdi mdi-eye-off-outline"></i></span>
+                                     
                                     </div>
                                 </div>
                             </div>
@@ -174,24 +181,25 @@
                                     <div class="input-group input-group-merge">
                                         <div class="form-floating form-floating-outline">
                                             <input asp-for=ConfirmPassword type="password"
-                                                   id="password"
+                                                   id="confirmPassword"
                                                    class="form-control"
                                                    name="ConfirmPassword"
                                                    placeholder="&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;"
-                                                   aria-describedby="password" />
-                                            <label for="ConfirmPassword">Confirm password</label>
+                                                   aria-describedby="password" required />
+                                            <span id="confirmPasswordValidation" class="text-danger"></span>
+                                            <label for="ConfirmPassword">Nhập lại mật khẩu</label>
                                         </div>
-                                        <span class="input-group-text cursor-pointer"><i class="mdi mdi-eye-off-outline"></i></span>
+ 
                                     </div>
                                 </div>
                             </div>
                             <div class="mb-3 d-flex justify-content-between">
                                 <a asp-action="ForgotPassword" asp-controller="Account" class="float-end mb-1">
-                                    <span>Forgot Password?</span>
+                                    <span>Quên mật khẩu</span>
                                 </a>
                             </div>
                             <div class="mb-3">
-                                <button class="btn btn-primary d-grid w-100" type="submit" onclick="validatePassword()">Save change</button>
+                                <button class="btn btn-primary d-grid w-100" type="submit" id="logoutButton" onclick="validatePassword()">Lưu thay đổi</button>
                             </div>
                         </form>
                         <div class="text-center">
@@ -232,7 +240,8 @@
     <script src="~/contentadmin/assets/vendor/libs/node-waves/node-waves.js"></script>
     <script src="~/contentadmin/assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.js"></script>
     <script src="~/contentadmin/assets/vendor/js/menu.js"></script>
-
+   
+     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10/dist/sweetalert2.min.js"></script>
     <!-- endbuild -->
     <!-- Vendors JS -->
     <!-- Main JS -->
@@ -242,8 +251,63 @@
     <!-- Place this tag in your head or just before your close body tag. -->
     <script async defer src="https://buttons.github.io/buttons.js"></script>
 
+    <script>
+        var oldPasswordInput = document.getElementById('oldPassword');
+        var newPasswordInput = document.getElementById('newPassword');
+        var confirmpasswordInput = document.getElementById('confirmPassword');
+        //span
+        var oldPasswordValidationSpan = document.getElementById('oldPasswordValidation');
+        var newPasswordValidationSpan = document.getElementById('newPasswordValidation'); 
+        var confirmPasswordValidationSpan = document.getElementById('confirmPasswordValidation');
+        //cũ
+        oldPasswordInput.addEventListener('blur', function () {
+            validateOldPassword();
+        });
+        //mới
+        newPasswordInput.addEventListener('input', function () {
+            validateNewPassword();
+        }); 
+        //nhập lại mk mới
+        confirmpasswordInput.addEventListener('input', function () {
+            validateConfirmPassword();
+        });
+
+        function validateOldPassword() {
+            if (oldPasswordInput.value.trim() === '') {
+                oldPasswordValidationSpan.textContent = 'Vui lòng nhập mật khẩu cũ.';
+                oldPasswordValidationSpan.style.display = 'inline';
+            }  else {
+                oldPasswordValidationSpan.textContent = '';
+                oldPasswordValidationSpan.style.display = 'none';
+            }
+            // Thêm logic kiểm tra khác nếu cần
+        }
+
+        function validateNewPassword() {
+            if (newPasswordInput.value.trim() === '') {
+                newPasswordValidationSpan.textContent = 'Vui lòng nhập mật khẩu mới.';
+                newPasswordValidationSpan.style.display = 'inline';
+            } else {
+                newPasswordValidationSpan.textContent = '';
+                newPasswordValidationSpan.style.display = 'none';
+            }
+            // Thêm logic kiểm tra khác nếu cần
+        }
+        function validateConfirmPassword() {
+            if (confirmpasswordInput.value.trim() === '') {
+                confirmPasswordValidationSpan.textContent = 'Vui lòng nhập lại mật khẩu mới.';
+                confirmPasswordValidationSpan.style.display = 'inline';
+            } else {
+                confirmPasswordValidationSpan.textContent = '';
+                confirmPasswordValidationSpan.style.display = 'none';
+            }
+            // Thêm logic kiểm tra khác nếu cần
+        }
+    </script>
+
 
 </body>
+
 </html>
 
 
