--- a/APPVIEW/Views/Bill/GetList2.cshtml
+++ b/APPVIEW/Views/Bill/GetList2.cshtml
@@ -21,7 +21,7 @@
 
         </div>
         <div class="col-md-2 form-group">
-            <button type="submit" class="btn btn-success">Shearch</button>
+            <button type="submit" class="btn btn-success">Tìm Kiếm</button>
 
         </div>
         <div class="col-md-2 form-group">
