--- a/APPVIEW/Views/Bill/GetList.cshtml
+++ b/APPVIEW/Views/Bill/GetList.cshtml
@@ -18,7 +18,7 @@
 
     </div>
     <div class="col-md-2 form-group">
-        <button type="submit" class="btn btn-success">Shearch</button>
+        <button type="submit" class="btn btn-success">Tìm Kiếm</button>
 
     </div>
     <div class="col-md-2 form-group">
