--- a/APPVIEW/Views/Category/Create.cshtml
+++ b/APPVIEW/Views/Category/Create.cshtml
@@ -10,28 +10,27 @@
     <div class="col-xxl">
         <div class="card mb-4">
             <div class="card-header d-flex align-items-center justify-content-between">
-                <h5 class="mb-0">Create a Category</h5>
-
+                <h5 class="mb-0">Tạo một danh mục mới</h5>
             </div>
             <div class="card-body">
                 <form asp-action="Create" method="post">
                     <div class="row mb-3">
-                        <label asp-for="Name" class="col-sm-2 col-form-label">Name Category</label>
+                        <label asp-for="Name" class="col-sm-2 col-form-label">Tên danh mục</label>
                         <div class="col-sm-10">
-                            <input type="text" class="form-control" asp-for="Name" placeholder="Enter name of Category" />
+                            <input type="text" class="form-control" asp-for="Name" placeholder="Nhập tên danh mục" />
                             <span asp-validation-for="Name" class="text-danger"></span>
                         </div>
                     </div>
                     <div class="row mb-3">
-                        <label asp-for="Status" class="col-sm-2 col-form-label">Status</label>
+                        <label asp-for="Status" class="col-sm-2 col-form-label">Trạng thái</label>
                         <div class="col-sm-10 offset-sm-2">
                             <div class="form-check">
                                 <input asp-for="Status" name="status" class="form-check-input" checked type="radio" value="1" id="defaultRadio1" />
-                                <label class="form-check-label" asp-for="Status"> Use </label>
+                                <label class="form-check-label" asp-for="Status"> Sử dụng </label>
                             </div>
                             <div class="form-check">
                                 <input asp-for="Status" name="status" class="form-check-input" type="radio" value="0" id="defaultRadio2" />
-                                <label class="form-check-label" for="defaultRadio2"> Not use </label>
+                                <label class="form-check-label" for="defaultRadio2"> Không sử dụng </label>
                             </div>
                             <span asp-validation-for="Status" class="text-danger"></span>
                         </div>
@@ -40,11 +39,11 @@
                     <div class="row justify-content-end">
                         <div class="col-sm-10">
                             <button type="submit" class="btn btn-primary">
-                                <span class="mdi mdi-check-outline"></span> Submit
+                                <span class="mdi mdi-check-outline"></span> Gửi
                             </button>
                             <div class="btn-group ms-2">
                                 <a href="#" class="btn btn-danger waves-effect waves-light" onclick="goBack()">
-                                    <span class="mdi mdi-close"></span> Cancel
+                                    <span class="mdi mdi-close"></span> Hủy bỏ
                                 </a>
                                 <script>
                                     function goBack() {
@@ -59,5 +58,6 @@
         </div>
     </div>
 </div>
+
 
 
