--- a/APPVIEW/Views/Color/GetList.cshtml
+++ b/APPVIEW/Views/Color/GetList.cshtml
@@ -8,27 +8,27 @@
 
 <div class="card">
     <div class="card-header">
-        <h5 class="mb-0">Clors</h5>
+        <h5 class="mb-0">Màu sắc</h5>
     </div>
     <div class="card-body">
         <a class="btn btn-success waves-effect waves-light" asp-action="Create">
-            <span class="mdi mdi-plus-thick"></span>Create new
+            <span class="mdi mdi-plus-thick"></span>Tạo mới
         </a>
 
         <form asp-action="Search" method="get" class="form-inline" style="margin-left: 1000px">
-            <input placeholder="Search" type="text" name="searchTerm" id="searchTerm" class="form-control" aria-label="Recipient's username" aria-describedby="basic-addon2" />
+            <input placeholder="Tìm kiếm" type="text" name="searchTerm" id="searchTerm" class="form-control" aria-label="Tìm kiếm" aria-describedby="basic-addon2" />
         </form>
         <div class="table-responsive">
             <table class="table table-hover table-striped">
                 <thead>
                     <tr>
                         <th>STT</th>
-                        <th>Name</th>
-                        <th>Code </th>
-                        <th>Status</th>
-                        <th>Create date</th>
-                        <th>Update date</th>
-                        <th>Actions</th>
+                        <th>Tên</th>
+                        <th>Mã </th>
+                        <th>Trạng thái</th>
+                        <th>Ngày tạo</th>
+                        <th>Ngày cập nhật</th>
+                        <th>Hành động</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -43,7 +43,7 @@
                                 <td>@Html.DisplayFor(modelItem => item.Colorcode)</td>
                                 <td>
                                     <span class="badge @(item.Status == 1 ? "badge rounded-pill bg-label-success" : "badge rounded-pill bg-label-danger")">
-                                        @(item.Status == 1 ? "Using" : "Not use")
+                                        @(item.Status == 1 ? "Đang sử dụng" : "Không sử dụng")
                                     </span>
                                 </td>
                                 <td>
@@ -51,7 +51,7 @@
                                         DateTime createDate = item.Create_date;
                                         string formattedDate = createDate != DateTime.MinValue
                                         ? createDate.ToString("dd/MM/yyyy")
-                                        : "Not changed";
+                                        : "Chưa cập nhật";
                                     }
                                     @formattedDate
                                 </td>
@@ -60,16 +60,16 @@
                                         DateTime updatedDate = item.Update_date;
                                         string formattedUpdateDate = updatedDate != DateTime.MinValue
                                         ? updatedDate.ToString("dd/MM/yyyy")
-                                        : "Not changed";
+                                        : "Chưa cập nhật";
                                     }
                                     @formattedUpdateDate
                                 </td>
                                 <td>
                                     <a href="@Url.Action("Edit", new { id = item.Id })" class="btn btn-info waves-effect waves-light">
-                                        <span class="mdi mdi-pencil-box-outline"></span>Edit
+                                        <span class="mdi mdi-pencil-box-outline"></span>Sửa
                                     </a>
                                     <a href="@Url.Action("Delete", new { id = item.Id })" class="btn btn-danger waves-effect waves-light">
-                                        <span class="mdi mdi-delete"></span>Delete
+                                        <span class="mdi mdi-delete"></span>Xóa
                                     </a>
                                 </td>
                             </tr>
@@ -78,7 +78,7 @@
                     else
                     {
                         <tr>
-                            <td colspan="10" class="text-center">No Data.</td>
+                            <td colspan="7" class="text-center">Không có dữ liệu.</td>
                         </tr>
                     }
                 </tbody>
@@ -86,4 +86,5 @@
         </div>
     </div>
 </div>
+
 
