--- a/APPVIEW/Views/QLBills/ShowBillDaNhan.cshtml
+++ b/APPVIEW/Views/QLBills/ShowBillDaNhan.cshtml
@@ -2,6 +2,7 @@
     ViewData["Title"] = "ShowBill";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
     @using APPDATA.Models;
+@using System.Globalization;
     List<Bill> bill = ViewBag.viewbill;
     List<BillDetail> billct = ViewBag.viewbillct;
     List<ProductDetail> prdct = ViewBag.viewprdct;
@@ -14,30 +15,28 @@
 
 
 
-<form asp-controller="QLBills" asp-action="ShowBillDaNhan" class="row contact_form" method="post">
-    <div class="row">
-        <div class="col-md-3 form-group">
-            <input type="text" class="form-control" name="search" placeholder="Nhập mã hóa đơn để tìm kiếm">
-
-        </div>    <div class="col-md-2 form-group">
-            <button type="submit" class="btn btn-success">Tìm kiếm</button>
-
-        </div>
-    </div>
-</form>
 <div class="card">
     <div class="card-header">
     </div>
     <div class="card-body">
+        <form asp-controller="QLBills" asp-action="ShowBillDaNhan" class="row contact_form" method="post">
+            <div class="row">
+                <div class="col-md-3 form-group">
+                    <input type="text" class="form-control" name="search" placeholder="Nhập mã hóa đơn để tìm kiếm">
 
-        <div class="table-responsive">
+                </div>    <div class="col-md-2 form-group">
+                    <button type="submit" class="btn btn-success">Tìm kiếm</button>
+
+                </div>
+            </div>
+        </form>
+        <div class="table-responsive table-sm">
             <table class="table table-hover">
                 <thead>
                     <tr>
                         <th>STT</th>
                         <th>Mã hóa đơn</th>
                         <th>Tên khách hàng</th>
-
                         <th>SDT</th>
                         <th>Địa chỉ</th>
                         <th>Tổng tiền</th>
@@ -77,10 +76,17 @@
                                     @itembill.PhoneNumber
                                 </td>
                                 <td>
-                                    @itembill.Address
+                                    @if (!string.IsNullOrEmpty(itembill.Address) && itembill.Address.Length > 50)
+                                    {
+                                        @Html.Raw(Html.Encode(itembill.Address.Substring(0, 50)) + "...")
+                                    }
+                                    else
+                                    {
+                                        @Html.Raw(Html.Encode(itembill.Address))
+                                    }
                                 </td>
                                 <td>
-                                    @itembill.TotalMoney
+                                    @string.Format(new CultureInfo("vi-VN"), "{0:C0}", itembill.TotalMoney)
                                 </td>
                                 @if (itembill.Status == 1)
                                 {
@@ -107,17 +113,29 @@
                                         DateTime createDate = itembill.CreateDate;
                                         string formattedDate = createDate != DateTime.MinValue
                                         ? createDate.ToString("dd/MM/yyyy")
-                                        : "Not changed";
+                                        : "Chưa thay đổi";
                                     }
                                     @formattedDate
                                 </td>
 
                                 <td>
-                                    <button style="width:140px" class="btn btn-danger"> @Html.ActionLink("Đã Nhận", "NhanHang", new { id = itembill.id }, new { style = "color:white;" }) </button>
-                                </td>
-                            
-                                <td>
-                                    <button style="width:140px" class="btn btn-danger"> @Html.ActionLink("Chi Tiết ", "Chitiet", new { id = itembill.id }, new { style = "color:white;" }) </button>
+
+                                    <div class="d-inline-block text-nowrap">
+                                        <button class="btn btn-sm btn-icon btn-text-secondary rounded-pill btn-icon dropdown-toggle hide-arrow" data-bs-toggle="dropdown">
+                                            <i class="mdi mdi-dots-vertical mdi-20px"></i>
+                                        </button>
+                                        <div class="dropdown-menu dropdown-menu-end m-0">
+                                            <a href=" @Url.Action("GiaoHang", new { id = itembill.id })" class="dropdown-item ">
+                                                <i class="mdi mdi-truck me-2"></i>
+                                                <span>Giao hàng</span>
+                                            </a>
+                                            <a href="@Url.Action("Chitiet", new { id = itembill.id })" class="dropdown-item">
+                                                <i class="mdi mdi-eye-outline me-2"></i>
+                                                <span>Chi tiết</span>
+                                            </a>
+                                        </div>
+                                    </div>
+
                                 </td>
 
                             </tr>
