--- a/APPVIEW/Views/QLBills/ShowBillDaNhan.cshtml
+++ b/APPVIEW/Views/QLBills/ShowBillDaNhan.cshtml
@@ -125,9 +125,9 @@
                                             <i class="mdi mdi-dots-vertical mdi-20px"></i>
                                         </button>
                                         <div class="dropdown-menu dropdown-menu-end m-0">
-                                            <a href=" @Url.Action("GiaoHang", new { id = itembill.id })" class="dropdown-item ">
+                                            <a href=" @Url.Action("nhanhang", new { id = itembill.id })" class="dropdown-item ">
                                                 <i class="mdi mdi-truck me-2"></i>
-                                                <span>Giao hàng</span>
+                                                <span>Nhận hàng</span>
                                             </a>
                                             <a href="@Url.Action("Chitiet", new { id = itembill.id })" class="dropdown-item">
                                                 <i class="mdi mdi-eye-outline me-2"></i>
