--- a/APPVIEW/Views/Home/Checkout.cshtml
+++ b/APPVIEW/Views/Home/Checkout.cshtml
@@ -228,7 +228,6 @@
 
 
                 <div class="col-lg-8">
-                    <h3>Billing Details</h3>
                     <form class="row contact_form" action="~/home/dathangn" method="post" novalidate="novalidate">
                         <div class="col-md-6 form-group p_star">
                             <input type="text" class="form-control" id="first" placeholder="Fullname" asp-for="@Model.Name" required>
@@ -383,7 +382,7 @@
 
                         <div class="payment_item">
                             <div class="radion_btn">
-                                <input type="radio" id="f-option5" name="selector">
+                                <input type="radio" id="f-option5" name="selector"><a href="d:\datn\appview\views\home\checkout.cshtml">d:\datn\appview\views\home\checkout.cshtml</a>
                                 <label for="f-option5">Thanh toán(COD)</label>
                                 <div class="check"></div>
                             </div>
